force-app/main/default/objects/gupshupcrm__Bulk_Staging__c/gupshupcrm__Bulk_Staging__c.object-meta.xml
<CustomObject>
    <label>Bulk Staging</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Bulk Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>