force-app/main/default/objects/gupshupcrm__Bulk_Staging__c/fields/gupshupcrm__Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Apex_Job_Id__c</fullName>
    <label>Apex Job Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>