force-app/main/default/objects/gupshupcrm__Bulk_Staging__c/fields/gupshupcrm__Reprocessing_Count__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Reprocessing_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reprocessing Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>