force-app/main/default/objects/gupshupcrm__Bulk_Staging__c/fields/gupshupcrm__Status__c.field-meta.xml
<CustomField>
    <fullName>gupshupcrm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Reprocess</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>