force-app/main/default/objects/gupshupcrm__Bulk_Staging__c/listViews/gupshupcrm__All.listView-meta.xml
<ListView>
    <fullName>gupshupcrm__All</fullName>
    <columns>NAME</columns>
    <columns>gupshupcrm__Apex_Job_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>gupshupcrm__Reprocessing_Count__c</columns>
    <columns>gupshupcrm__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>